--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "src/",
     "lib/",
     "CHANGELOG.md",
-    "binding.gyp"
+    "binding.gyp",
+    "lib/bindings/"
   ],
   "repository": {
     "type": "git",
@@ -41,7 +42,7 @@
   },
   "scripts": {
     "build": "node-pre-gyp install --build-from-source",
-    "install": "node-pre-gyp install --fallback-to-build",
+    "install": "echo Prebuilt binary included - no compilation needed",
     "test": "mocha --slow 5000 --timeout 30000"
   },
   "dependencies": {
